--- a/Agenda v2/app/src/main/AndroidManifest.xml
+++ b/Agenda v2/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name=".Application.AgendaApplication"
+        android:name=".application.AgendaApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/shr_app_name"
@@ -31,12 +31,27 @@
         <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:parentActivityName=".InicioActivity" ></activity>
-
+            android:parentActivityName=".InicioActivity"/>
         <activity
             android:name=".ProfileActivity"
             android:label="@string/title_activity_profile"
-            android:parentActivityName=".InicioActivity" ></activity>
+            android:parentActivityName=".InicioActivity"/>
+        <activity android:name=".FirebaseExample"
+            android:label="Ingresar Usuario"
+            android:parentActivityName=".InicioActivity"/>
+
+        <service
+            android:name=".firebaseServices.MyFirebaseInstanceIDService">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+            </intent-filter>
+        </service>
+        <service
+            android:name=".firebaseServices.MyFirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
