--- a/Agenda v2/app/build.gradle
+++ b/Agenda v2/app/build.gradle
@@ -26,9 +26,13 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0-alpha3'
     implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.google.code.gson:gson:2.8.2'
-    implementation 'com.google.firebase:firebase-messaging:11.8.0'
-    implementation 'com.google.firebase:firebase-firestore:11.8.0'
+    implementation 'com.google.firebase:firebase-messaging:17.3.3'
+    implementation 'com.google.firebase:firebase-firestore:17.1.1'
+
+    implementation "com.firebaseui:firebase-ui-auth:3.0.0"
+    implementation "com.firebaseui:firebase-ui-firestore:4.1.0"
     testImplementation 'junit:junit:4.12'
+
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
