--- a/Agenda v2/app/build.gradle
+++ b/Agenda v2/app/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.google.firebase:firebase-messaging:17.3.3'
     implementation 'com.google.firebase:firebase-firestore:17.1.1'
-
+    implementation 'com.google.firebase:firebase-core:16.0.3'
     implementation "com.firebaseui:firebase-ui-auth:3.0.0"
     implementation "com.firebaseui:firebase-ui-firestore:4.1.0"
     testImplementation 'junit:junit:4.12'
